# FitSentiment

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
constants/: constants.py  test_constants.py
data/: annotations.json  annotations_chunk_1.json  corpus.csv  feature_corpus.csv  test_corpus.csv
docs/: nltk_download_instructions.md  project_checklist.md
fitsentiment/: __init__.py  connector.py  dataset.py  feature_context.py  feature_extraction.py  main.py  model.py  preprocess.py  preprocess_data.py  reddit_scraper.py  train.py
src/: reddit_scraper.py
tests/: test_constants.py  test_preprocess.py  test_preprocess_data.py  test_reddit_scraper.py
utils/: constants.py  get_labels.py  label_data.py  lemmatize_text.py
