[metadata]
name = FitSentiment
version = 1.0
author = Anjola Aina
author_email = anjola.aina@gmail.com
description = A sentiment classifier for workout splits using Reddit data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/anj0la/FitSentiment
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11

[options.packages.find]
exclude =
    tests
    constants.test_constants
